WebCore/html/HTMLFormControlElement.h
@@ -31,6 +31,7 @@ namespace WebCore {
 class FormDataList;
 class HTMLFormElement;
 class RenderTextControl;
+class ValidationMessage;
 class ValidityState;
 class VisibleSelection;
 
@@ -84,6 +85,8 @@ public:
 
     virtual bool willValidate() const;
     String validationMessage();
+    void updateVisibleValidationMessage();
+    void hideVisibleValidationMessage();
     bool checkValidity(Vector<RefPtr<HTMLFormControlElement> >* unhandledInvalidControls = 0);
     // This must be called when a validation constraint or control value is changed.
     void setNeedsValidityCheck();
@@ -111,6 +114,7 @@ protected:
 
     virtual void dispatchFocusEvent();
     virtual void dispatchBlurEvent();
+    virtual void detach();
 
     void removeFromForm();
 
@@ -131,9 +135,11 @@ private:
     virtual HTMLFormElement* virtualForm() const;
     virtual bool isDefaultButtonForForm() const;
     virtual bool isValidFormControlElement();
+    String visibleValidationMessage() const;
 
     HTMLFormElement* m_form;
     OwnPtr<ValidityState> m_validityState;
+    OwnPtr<ValidationMessage> m_validationMessage;
     bool m_disabled : 1;
     bool m_readOnly : 1;
     bool m_required : 1;
