WebCore/WebCore.pro
@@ -973,6 +973,7 @@ SOURCES += \
     html/TextInputType.cpp \
     html/TimeInputType.cpp \
     html/URLInputType.cpp \
+    html/ValidationMessage.cpp \
     html/ValidityState.cpp \
     html/WeekInputType.cpp \
     html/canvas/CanvasGradient.cpp \
